cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(wxGrabber)

if(MSVC)
    add_compile_options(/std:c++20 /Zc:__cplusplus)

    # Windows-specific wxWidgets paths
    set(wxWidgets_ROOT_DIR "C:/Programs/WxWidgets/wxWidgets")
    set(wxWidgets_LIB_DIR "${wxWidgets_ROOT_DIR}/lib/vc_x64_dll")

    find_package(wxWidgets COMPONENTS core base adv media REQUIRED)
    include(${wxWidgets_USE_FILE})

    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
else()
    # Linux: bypass FindwxWidgets.cmake bugs by querying wx-config directly
    execute_process(
        COMMAND wx-config --cxxflags
        OUTPUT_VARIABLE WX_CXXFLAGS
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
    execute_process(
        COMMAND wx-config --libs core,base,adv,media
        OUTPUT_VARIABLE WX_LIBS
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )

    separate_arguments(WX_CXXFLAGS NATIVE_COMMAND "${WX_CXXFLAGS}")
    separate_arguments(WX_LIBS NATIVE_COMMAND "${WX_LIBS}")

    add_compile_options(${WX_CXXFLAGS})
endif()

file(GLOB_RECURSE project_GLOB
    src/*.cpp
    #src/*.c
)

# print project_GLOB
message(STATUS "project_GLOB: ${project_GLOB}")

add_executable(wxGrabber ${project_GLOB})

if(MSVC)
    set_target_properties(wxGrabber PROPERTIES WIN32_EXECUTABLE YES)
    target_link_libraries(wxGrabber PRIVATE ${wxWidgets_LIBRARIES})
    target_include_directories(wxGrabber PRIVATE ${wxWidgets_INCLUDE_DIRS})
else()
    target_link_libraries(wxGrabber PRIVATE ${WX_LIBS})
endif()

target_include_directories(wxGrabber PRIVATE include)

# minivorbis c implementation
add_library(minivorbis_impl src/vorbis/minivorbis_impl.c)
target_compile_options(minivorbis_impl PRIVATE 
    $<$<CXX_COMPILER_ID:MSVC>:/w>
    $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-w>
)
target_link_libraries(wxGrabber PRIVATE minivorbis_impl)

# Windows-only: copy DLLs after build
if(MSVC)
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        file(GLOB dlls_GLOB
            ${wxWidgets_LIB_DIR}/*ud*.dll
        )
    else()
        file(GLOB dlls_GLOB
            ${wxWidgets_LIB_DIR}/*.dll
        )
        file(GLOB dllsDebug_GLOB
            ${wxWidgets_LIB_DIR}/*ud*.dll
        )
        list(REMOVE_ITEM dlls_GLOB ${dllsDebug_GLOB})
    endif()

    add_custom_command(TARGET wxGrabber POST_BUILD          # Adds a post-build event to MyTest
    COMMAND ${CMAKE_COMMAND} -E copy_if_different           # which executes "cmake - E copy_if_different..."
        ${dlls_GLOB}                                        # <--this is in-file
        $<TARGET_FILE_DIR:wxGrabber>                    # <--this is out-file path            
    )
endif()
